karl package Changelog
======================

Unreleased
----------

- Use doctotext to index Office files to allow indexing of Office 2010
  formats (docx, xlsx, pptx).

- Profile owners can now deactivate their own profiles.

- Ux2 template for deactivation.

- Make sure biography field is passed into created profile on invitations.

- Add globalize date formatting to all pages that still don't have it.

- Make tags and creator filters not sticky when starting new search.

- When mailin receives a reply for content that doesn't exist anymore,
  bounce message instead of sending to quarantine.

- Removed hardwired instance name from tagbox js which caused bad urls.

- Fix CSV user uploads when a user has already been invited to Karl.
  (LP #1025922)

- always use short description in content feeds to avoid formatting issues with
  special content.

- remove duplicate alpha added subscriber which caused community letter nav to
  show invalid letters.

3.90 (2012-07-12)
-----------------

- Fixed bug in Chatter that caused Not Found errors to get turned into 
  General Errors that tripped the error monitor's alarm.  (LP #1018909)

- Added support for logging Not Found errors under their own category in the 
  Redis log, so they can be monitored without tripping any alarms.  
  (LP #1018909)

- Guard office links in footer with permission.  (LP #1018478)

- Continuing work on UX2.

3.89 (2012-06-26)
-----------------

- Continuing work on UX2.

- Fixed the 'Add Column' link in peopledir. (LP #931878)

3.88 (2012-06-06)
-----------------

- Fixed bug in digest. (LP #932865)

- Continuing work on UX2.

3.87 (2012-05-30)
-----------------

- Replaced the old filesystem based error monitor with the redislog. 
  (LP #960107)

3.86 (2012-05-10)
-----------------

- The envelope from for bounced email messages is now set to the value of the 
  'postoffice.bounce_from_email' setting.  (LP #996027)

- The admin views which access the postoffice quarantine now connect to the