@@ -4,6 +4,8 @@ karl package Changelog
 Unreleased
 ----------
 
+- Fix up content feeds when users are renamed or merged.
+
 - Use doctotext to index Office files to allow indexing of Office 2010
   formats (docx, xlsx, pptx).
 
